# Starry

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README-macOS.md  README.json  README.md  add_crates.sh  build_img.sh  crates.js  index.html  linker_aarch64-phytiumpi.lds  linker_aarch64-raspi4.lds  search-index.js  src-files.js  zlm_start.sh
.cargo/: config.toml
api/arceos_api/: Cargo.toml
api/arceos_api/src/imp/: task.rs
api/arceos_posix_api/: .gitignore  Cargo.toml  build.rs
api/arceos_posix_api/src/: lib.rs
api/arceos_posix_api/src/imp/: fd_ops.rs
api/arceos_posix_api/src/imp/pthread/: mod.rs
api/axfeat/: Cargo.toml
api/linux_syscall_api/: Cargo.toml  Makefile  README.md
api/linux_syscall_api/.github/workflows/: build.yml  test.yml
api/linux_syscall_api/src/: api.rs  ctypes.rs  lib.rs  syscall.rs  trap.rs
api/linux_syscall_api/src/syscall_fs/: fs_syscall_id.rs  mod.rs
api/linux_syscall_api/src/syscall_fs/ctype/: epoll.rs  eventfd.rs  file.rs  mod.rs  pidfd.rs  pipe.rs
api/linux_syscall_api/src/syscall_fs/imp/: ctl.rs  epoll.rs  io.rs  link.rs  mod.rs  mount.rs  poll.rs  stat.rs
api/linux_syscall_api/src/syscall_mem/: imp.rs  mem_syscall_id.rs  mod.rs
api/linux_syscall_api/src/syscall_net/: imp.rs  mod.rs  net_syscall_id.rs  socket.rs
api/linux_syscall_api/src/syscall_task/: mod.rs  task_syscall_id.rs
api/linux_syscall_api/src/syscall_task/imp/: futex.rs  mod.rs  schedule.rs  signal.rs  task.rs  utils.rs
apps/display/: Cargo.toml
apps/display/src/: display.rs
apps/fs/shell/: Cargo.toml
apps/task/tls/: Cargo.toml
apps/task/tls/src/: main.rs
arceos_api/: all.html  enum.AxError.html
arceos_posix_api/: all.html  fn.sys_close.html  fn.sys_dup.html  fn.sys_dup2.html  fn.sys_dup3.html  fn.sys_fcntl.html  index.html  sidebar-items.js
arch_boot/: all.html  fn.current_boot_stack.html  index.html  sidebar-items.js
axalloc/: all.html  index.html  sidebar-items.js  struct.GlobalAllocator.html  struct.GlobalPage.html  struct.PhysPage.html
axconfig/: all.html  constant.ARCH.html  constant.FAMILY.html  constant.KERNEL_BASE_PADDR.html  constant.KERNEL_BASE_VADDR.html  constant.MAX_USER_HEAP_SIZE.html  constant.MAX_USER_STACK_SIZE.html  constant.MMIO_REGIONS.html  constant.PCI_BUS_END.html  constant.PCI_ECAM_BASE.html  constant.PCI_RANGES.html  constant.PHYS_MEMORY_BASE.html  constant.PHYS_MEMORY_END.html  constant.PHYS_MEMORY_SIZE.html  constant.PHYS_VIRT_OFFSET.html  constant.PLATFORM.html  constant.SIGNAL_TRAMPOLINE.html  constant.SMP.html  constant.TASK_STACK_SIZE.html  constant.TESTCASE_MEMORY_SIZE.html  constant.TESTCASE_MEMORY_START.html  constant.TICKS_PER_SEC.html  constant.TIMER_FREQUENCY.html  constant.USER_HEAP_BASE.html  constant.USER_MEMORY_START.html  constant.USER_STACK_TOP.html  constant.VIRTIO_MMIO_REGIONS.html  index.html  sidebar-items.js
axdisplay/: index.html
axdriver/: fn.init_drivers.html  index.html  struct.AllDevices.html
axfs/: all.html  constant.BLOCK_SIZE.html  fn.init_filesystems.html  index.html  sidebar-items.js
axfutex/: all.html  fn.futex_hash.html  index.html  (+4 more)
modules/arch_boot/: Cargo.toml  build.rs
modules/arch_boot/.github/workflows/: ci.yml  doc.yml
modules/arch_boot/src/: lib.rs  mp.rs
modules/arch_boot/src/platform/: mod.rs
modules/arch_boot/src/platform/aarch64_common/: boot.rs  mod.rs  mp.rs  raspi_mp.rs
modules/arch_boot/src/platform/dummy/: mod.rs
modules/arch_boot/src/platform/riscv64_qemu_virt/: boot.rs  mod.rs  mp.rs
modules/arch_boot/src/platform/x86_pc/: boot.rs  mod.rs  mp.rs
modules/axalloc/: Cargo.toml
modules/axdisplay/: Cargo.toml
modules/axdriver/: .gitignore  Cargo.toml  build.rs
modules/axdriver/src/: drivers.rs  lib.rs  macros.rs
modules/axfs/: Cargo.toml
modules/axfs/src/: dev.rs  mounts.rs  root.rs
modules/axfs/src/api/: port.rs
modules/axfs/src/fs/: another_ext4.rs  ext4_rs.rs  fatfs.rs  lwext4_rust.rs  mod.rs
modules/axfutex/: .gitrepo  Cargo.toml
modules/axfutex/src/: flags.rs  futex.rs  jhash.rs  lib.rs  queues.rs
modules/axhal/: Cargo.toml  build.rs  linker.lds.S
modules/axhal/src/: cpu.rs  lib.rs  mem.rs
modules/axhal/src/arch/: mod.rs
modules/axhal/src/arch/aarch64/: context.rs  mod.rs
modules/axhal/src/arch/riscv/: context.rs  mod.rs
modules/axhal/src/arch/x86_64/: context.rs  mod.rs
modules/axhal/src/platform/: mod.rs
modules/axhal/src/platform/aarch64_common/: generic_timer.rs  mem.rs  mod.rs
modules/axhal/src/platform/aarch64_raspi/: mod.rs
modules/axhal/src/platform/dummy/: mod.rs
modules/axhal/src/platform/riscv64_qemu_virt/: mod.rs  time.rs
modules/axhal/src/platform/x86_pc/: apic.rs  dtables.rs  misc.rs  mod.rs  time.rs  uart16550.rs
modules/axmem/: Cargo.toml
modules/axmem/src/: area.rs  lib.rs
modules/axnet/: Cargo.toml
modules/axnet/src/: lib.rs
modules/axnet/src/smoltcp_impl/: addr.rs  dns.rs  listen_table.rs  mod.rs  tcp.rs  udp.rs
modules/axprocess/: Cargo.toml
modules/axprocess/src/: api.rs  fd_manager.rs  flags.rs  futex.rs  lib.rs  link.rs  process.rs  signal.rs  stdio.rs
modules/axruntime/: Cargo.toml
modules/axruntime/src/: lang_items.rs  lib.rs  mp.rs
modules/axsignal/: Cargo.toml
modules/axsignal/src/: action.rs  info.rs  lib.rs
modules/axsignal/src/ucontext/: aarch64.rs  mod.rs  riscv.rs  x86_64.rs
modules/axsync/: Cargo.toml
modules/axsync/src/: completion.rs  lib.rs  mutex.rs
modules/axtask/: Cargo.toml
modules/axtask/src/: api.rs  api_s.rs  lib.rs  processor.rs  schedule.rs  task.rs  timers.rs  wait_list.rs  wait_queue.rs
modules/axtrap/: Cargo.toml
modules/axtrap/src/: lib.rs  trap.rs
modules/axtrap/src/arch/aarch64/: mem_fault.rs  mod.rs  trap.rs
modules/axtrap/src/arch/riscv/: macros.rs  mod.rs
modules/axtrap/src/arch/x86_64/: idt.rs  mod.rs  syscall.S  syscall.rs
tools/axlibc/: .gitignore  Cargo.toml  build.rs
tools/axlibc/build_x86_64/: .cflags
tools/axlibc/src/: lib.rs  libctypes_gen.rs  setjmp.rs
ulib/axstarry/: Cargo.toml
ulib/axstarry/src/: api.rs  file.rs  lib.rs
ulib/axstd/: Cargo.toml
ulib/axstd/src/: lib.rs
(+898 files in other folders)
