[patch."https://github.com/Starry-OS/axfeat.git".axfeat]
path = "crates/axfeat"

[patch."https://github.com/Starry-OS/axfs.git".axfs]
path = "crates/axfs"

[patch."https://github.com/Starry-OS/axstarry.git".axstarry]
path = "crates/axstarry"

[patch."https://github.com/Starry-OS/axtask.git".axtask]
path = "crates/axtask"

[patch."https://github.com/Starry-OS/linux_syscall_api.git".linux_syscall_api]
path = "crates/linux_syscall_api"

[patch."https://github.com/Starry-OS/taskctx.git".taskctx]
path = "crates/taskctx"

[profile.dev]
lto = true

[profile.release]
lto = true

[workspace]
members = ["apps/display", "apps/exception", "apps/helloworld", "apps/memtest", "apps/fs/shell", "apps/net/echoserver", "apps/net/httpclient", "apps/net/httpserver", "apps/net/udpserver", "apps/net/bwbench", "apps/task/parallel", "apps/task/sleep", "apps/task/yield", "apps/task/priority", "apps/task/tls", "apps/monolithic_userboot", "tools/axlibc"]
resolver = "2"
