[patch."https://github.com/Starry-OS/arch_boot.git".arch_boot]
path = "crates/arch_boot"

[patch."https://github.com/Starry-OS/axconfig.git".axconfig]
path = "crates/axconfig"

[patch."https://github.com/Starry-OS/axhal.git".axhal]
path = "crates/axhal"

[patch."https://github.com/Starry-OS/axmem.git".axmem]
path = "crates/axmem"

[patch."https://github.com/Starry-OS/axruntime.git".axruntime]
path = "crates/axruntime"

[patch."https://github.com/Starry-OS/of.git".of]
path = "crates/of"

[profile.dev]
lto = true

[profile.release]
lto = true

[workspace]
members = ["apps/display", "apps/exception", "apps/helloworld", "apps/memtest", "apps/fs/shell", "apps/net/echoserver", "apps/net/httpclient", "apps/net/httpserver", "apps/net/udpserver", "apps/net/bwbench", "apps/task/parallel", "apps/task/sleep", "apps/task/yield", "apps/task/priority", "apps/task/tls", "apps/monolithic_userboot", "tools/axlibc"]
resolver = "2"
