[package]
name = "axfeat"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Top-level feature selection for ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/api/axfeat"
documentation = "https://rcore-os.github.io/arceos/axfeat/index.html"
keywords = ["Starry"]

[features]
default = []

img = ["axruntime/img"]

# Monolithic kernel
monolithic = ["axruntime/monolithic", "axhal/monolithic", "dep:axprocess", "axnet/monolithic"]

# Multicore
smp = ["axhal/smp", "axruntime/smp", "spinlock/smp"]

# Floating point/SIMD
fp_simd = ["axhal/fp_simd", "taskctx/fp_simd"]

# Interrupts
irq = ["axhal/irq", "axruntime/irq", "axtask?/irq"]

# Memory
alloc = ["axalloc", "axruntime/alloc"]
alloc-tlsf = ["axalloc/tlsf"]
alloc-slab = ["axalloc/slab"]
alloc-buddy = ["axalloc/buddy"]
paging = ["alloc", "axhal/paging", "axruntime/paging"]
tls = ["alloc", "axhal/tls", "axruntime/tls", "axtask?/tls"]

# Multi-threading and scheduler
multitask = ["alloc", "axtask/multitask", "axsync/multitask", "axruntime/multitask"]
sched_fifo = ["axtask/sched_fifo"]
sched_rr = ["axtask/sched_rr", "irq"]
sched_cfs = ["axtask/sched_cfs", "irq"]

# File system
fs = ["alloc", "paging", "axdriver/virtio-blk", "dep:axfs", "axruntime/fs"] # TODO: try to remove "paging"
fatfs = ["axfs/fatfs"]
lwext4_rust = ["axfs/lwext4_rust"]
myfs = ["axfs?/myfs"]
ext4_rs = ["axfs/ext4_rs"]
another_ext4 = ["axfs/another_ext4"]

# Networking
net = ["alloc", "paging", "axdriver/virtio-net", "dep:axnet", "axruntime/net"]

# Display
display = ["alloc", "paging", "axdriver/virtio-gpu", "dep:axdisplay", "axruntime/display"]

# Device drivers
bus-mmio = ["axdriver?/bus-mmio"]
bus-pci = ["axdriver?/bus-pci"]
driver-ramdisk = ["axdriver?/ramdisk", "axfs?/use-ramdisk"]
driver-ixgbe = ["axdriver?/ixgbe"]
driver-e1000 = ["axdriver?/e1000"]
driver-bcm2835-sdhci = ["axdriver?/bcm2835-sdhci"]

# Logging
log-level-off = ["axlog/log-level-off"]
log-level-error = ["axlog/log-level-error"]
log-level-warn = ["axlog/log-level-warn"]
log-level-info = ["axlog/log-level-info"]
log-level-debug = ["axlog/log-level-debug"]
log-level-trace = ["axlog/log-level-trace"]

[dependencies]
axruntime = { workspace = true }
axhal = { workspace = true }
axlog = { workspace = true }
axalloc = { workspace = true, optional = true }
axdriver = { workspace = true, optional = true }
axfs = { workspace = true, optional = true }
axnet = { workspace = true, optional = true }
axdisplay = { workspace = true, optional = true }
axsync = { workspace = true, optional = true }
axtask = { workspace = true, optional = true }
axprocess = { workspace = true, optional = true }
spinlock = { git = "https://github.com/Starry-OS/spinlock.git", optional = true }
taskctx = { git = "https://github.com/Starry-OS/taskctx.git", optional = true }