[package]
name = "arceos-display"
version = "0.1.0"
edition = "2021"
authors = ["Shiping Yuan <robert_yuan@pku.edu.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { git = "https://github.com/Starry-OS/axstd.git", features = ["display"], optional = true }
embedded-graphics = "0.8"
