[package]
name = "axdisplay"
version = "0.1.0"
edition = "2021"
authors = ["Shiping Yuan <robert_yuan@pku.edu.com>"]
description = "ArceOS graphics module"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axdisplay"
documentation = "https://rcore-os.github.io/arceos/axdisplay/index.html"
keywords = ["Starry"]

[dependencies]
log = "0.4"
axdriver = { workspace = true, features = ["display"] }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
axsync = { workspace = true }
driver_display = { git = "https://github.com/Starry-OS/driver_display.git" }
