[package]
name = "axnet"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>", "ChengXiang Qi <kuangjux@outlook.com>"]
description = "ArceOS network module"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axnet"
documentation = "https://rcore-os.github.io/arceos/axnet/index.html"
keywords = ["Starry"]

[features]
monolithic = ["dep:axprocess"]

smoltcp = []

# 启用ip协议与否
ip = []

default = ["smoltcp"]

[dependencies]
log = "0.4"
cfg-if = "1.0"
spin = "0.9"
driver_net = { git = "https://github.com/Starry-OS/driver_net.git" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
axhal = { workspace = true }
axsync = { workspace = true }
axtask = { workspace = true }
axdriver = { workspace = true, features = ["net"] }
axio = { git = "https://github.com/Starry-OS/axio.git" }
axprocess = { workspace = true, optional = true }

[dependencies.smoltcp]
git = "https://github.com/rcore-os/smoltcp.git"
rev = "8bf9a9a"
default-features = false
features = [
  "alloc", "log",   # no std
  "medium-ethernet",
  "medium-ip",
  "proto-ipv4",
  "proto-ipv6",
  "socket-raw", "socket-icmp", "socket-udp", "socket-tcp", "socket-dns", "proto-igmp",
  # "fragmentation-buffer-size-65536", "proto-ipv4-fragmentation",
  # "reassembly-buffer-size-65536", "reassembly-buffer-count-32",
  # "assembler-max-segment-count-32",
]
