[package]
name = "axlibc"
version = "0.1.0"
edition = "2021"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
    "wudashuai <wu-ds20@mails.tsinghua.edu.cn>",
    "yfblock <321353225@qq.com>",
    "scPointer <bhy18@mails.tsinghua.edu.cn>",
    "Shiping Yuan <robert_yuan@pku.edu.com>",
]
description = "ArceOS user program library for C apps"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/ulib/axlibc"
documentation = "https://rcore-os.github.io/arceos/axlibc/index.html"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = []

irq = ["axfeat/irq", "arch_boot/irq"]

# Multicore
smp = ["arceos_posix_api/smp", "arch_boot/smp"]

# Floating point/SIMD
fp_simd = ["axfeat/fp_simd", "arch_boot/fp_simd"]

# Memory
alloc = ["arceos_posix_api/alloc"]
tls = ["alloc", "axfeat/tls"]

# Multi-task
multitask = ["arceos_posix_api/multitask"]

# File system
fs = ["arceos_posix_api/fs", "fd"]

# Networking
net = ["arceos_posix_api/net", "fd"]

# Schedule policy
sched_rr = ["arch_boot/preempt", "axfeat/sched_rr"]
sched_cfs = ["arch_boot/preempt", "axfeat/sched_cfs"]

# Libc features
fd = []
pipe = ["arceos_posix_api/pipe"]
select = ["arceos_posix_api/select"]
epoll = ["arceos_posix_api/epoll"]

[dependencies]
axfeat = { git = "https://github.com/Starry-OS/axfeat.git" }
arceos_posix_api = { git = "https://github.com/Starry-OS/arceos_posix_api.git" }
axio = { git = "https://github.com/Starry-OS/axio.git" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
arch_boot = { git = "https://github.com/Starry-OS/arch_boot.git" }

[build-dependencies]
bindgen ={ version = "0.66" }