[package]
name = "axstarry"
version = "0.1.0"
edition = "2021"
keywords = ["Starry"]

authors = ["Youjie Zheng <zyj578335934@gmail.com>"]
description = "ArceOS user program library for linux apps with posix_syscall"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["monolithic"]

monolithic = ["arch_boot/monolithic", "axfeat/monolithic", "paging", "fs", "multitask", "irq", "net"]

alloc = ["axfeat/alloc"]

img = ["axfeat/img"]

# Multicore
smp = ["axfeat/smp", "arch_boot/smp"]

# Floating point/SIMD
fp_simd = ["axfeat/fp_simd", "arch_boot/fp_simd"]

# Interrupts
irq = ["axfeat/irq", "arch_boot/irq"]

# Memory
paging = ["axfeat/paging"]
tls = ["axfeat/tls"]

# Multi-threading and scheduler
multitask = ["axfeat/multitask"]
sched_fifo = ["axfeat/sched_fifo"]
sched_rr = ["axfeat/sched_rr", "arch_boot/preempt"]
sched_cfs = ["axfeat/sched_cfs", "arch_boot/preempt"]

# Display
display = ["axfeat/display"]

# Bus-Pci
bus-pci = ["axfeat/bus-pci"]

# Fs
fs = ["axfeat/fs"]
fatfs = ["axfeat/fatfs"]
lwext4_rust = ["axfeat/lwext4_rust"]
ext4_rs = ["axfeat/ext4_rs"]
another_ext4 = ["axfeat/another_ext4"]
myfs = ["axfeat/myfs"]
devfs = []

# Network
net = ["axfeat/net", "linux_syscall_api/net"]
ixgbe_net = ["net", "axfeat/driver-ixgbe"]
e1000_net = ["net", "axfeat/driver-e1000"]

# Logging
log-level-off = ["axfeat/log-level-off"]
log-level-error = ["axfeat/log-level-error"]
log-level-warn = ["axfeat/log-level-warn"]
log-level-info = ["axfeat/log-level-info"]
log-level-debug = ["axfeat/log-level-debug"]
log-level-trace = ["axfeat/log-level-trace"]

[dependencies]
linux_syscall_api = { workspace = true }
axfeat = { workspace = true }
axlog = { workspace = true }
arch_boot = { workspace = true }
axtask = { workspace = true }
axfs = { workspace = true }